[package]
name = "pasque"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4.26"
octets = "0.3"
quiche = { version = "0.23", features = ["qlog"] }
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7.13"
tun = { version = "0.7", features = ["async"] }
url = "2.5"
